modified:   nbproject/private/private.properties 	modified:   our_sait/index.html 	modified:   our_sait/portfolio_type2.html 	modified:   our_sait/single-project.html 	modified:   our_sait/tmpl.html

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
+browser.id=SL[/Browsers/FirefoxBrowser
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\work
-index.file=index.php
+copy.src.target=/home/vlad/C:\\xampp\\htdocs\\work
 run.as=LOCAL
-url=http://worl.php
+url=http://workphp
